# sumisu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeNRF52.config  CMakeOSX.config  README.md  build.sh  config.sh  darwin.cmake  jlink.jdebug  nrf52.cmake  osx.cmake
app/: CMakeLists.txt
app/bletest/: main.c
app/clitest/: main.c
app/imutest/: main.c
app/ostest/: main.c  tests.c
app/test/: CMakeLists.txt  main.c
include/: README.md
include/misc/: cli.h  dtm.h  test.h  unity_config.h  unity_internals.h  util.h
include/os/: cmsis_os.h  crypto.h  heap.h  io.h  pubsub.h  pubsub_channels.h  pubsub_topics.h  sysinfo.h
include/service/: os_ble.h  os_cli.h  os_imu.h
os/: cmsis_os.h
platform/: README.md
platform/common/: CMakeLists.txt  ascii.c  cli.c  crypto.c  os_cli.c  os_crypto.c  os_logger.c  pubsub.c  unity_ext.c
platform/darwin/: CMakeLists.txt  cmsis_os.c  io.c  sysinfo.c  test.c
platform/nrf52/: CMakeLists.txt  init.c  io.c  main.c
platform/nrf52/ble/: CMakeLists.txt  os_ble.c  os_ble_bas.c  os_ble_dis.c  os_ble_internals.h  os_ble_service_template  os_ble_smith_command.c  os_ble_uart.c
platform/nrf52/hwconfig/BOARD_PCA10040/: ble_config.h  nrf_drv_config.h
platform/nrf52/io/: CMakeLists.txt  io.c  io_rtt.c  io_uart.c  rtt.h
platform/nrf52/ld/: nrf52_s132_app.ld  nrf52_softdevice_app.jlink
platform/nrf52/misc/: CMakeLists.txt  app_error_hooks.c  app_timer.h  app_timer_freertos.c  dtm.c  ostemp.c  sysinfo.c
platform/nrf52/service/: CMakeLists.txt  os_imu.c  os_imu_driver.h  os_imu_driver_mpu6500.c
tools/: CMakeLists.txt
tools/arm-linux-musleabi/include/c++/4.9.2/arm-linux-musleabi/bits/: c++config.h
tools/arm-linux-musleabi/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdw  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelf_linux_eabi.xsc  armelf_linux_eabi.xsw  armelf_linux_eabi.xw  armelfb_linux_eabi.x  armelfb_linux_eabi.xbn  armelfb_linux_eabi.xc  armelfb_linux_eabi.xd  armelfb_linux_eabi.xdc  armelfb_linux_eabi.xdw  armelfb_linux_eabi.xn  armelfb_linux_eabi.xs  armelfb_linux_eabi.xsc  armelfb_linux_eabi.xsw  armelfb_linux_eabi.xw
tools/scripts/: jlink_cli.sh  jlink_globals.sh
